--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Home</title>
 </head>
 <body>
-    <header>
+    <header>  
         <nav class="navbar navbar-light bg-light fixed-top">
             <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" style="border:none;">
@@ -45,7 +45,7 @@
         <div>
             <img class="row row-cols-1 row-cols-1 g-4 portada" src="./Assets/mono_Alma_1.png" alt="Mono_1">
             <div class="subtitulo">
-                <h2>Primavera/Verano</h2>
+                <p class="prim_ver">Primavera/Verano</p>
             </div>
             <div>
             <!-- 15 cards -->
@@ -198,7 +198,7 @@
             </div>
         </div>
     </main>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 </html>
